--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
-      content="Axios 2024, The inaugural edition of an inter-collegiate event organized by the Computational Sciences Association at PSG College of Technology. Bridging the gap between theory and practice, fostering innovation, and driving technological advancement. Signifies worthy in Greek, symbolizing the pursuit of excellence and technical mastery. A platform for challenging competitions, innovative ideas, and collaborative learning among the brightest minds."
+      content="Axios 2025, The second edition of an inter-collegiate event organized by the Computational Sciences Association at PSG College of Technology. Bridging the gap between theory and practice, fostering innovation, and driving technological advancement. Signifies worthy in Greek, symbolizing the pursuit of excellence and technical mastery. A platform for challenging competitions, innovative ideas, and collaborative learning among the brightest minds."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
